tooling/nargo_cli/tests/snapshots/execution_success/loop_small_break/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main(x: Field) {
    let mut count: u32 = 0;
    for i in 0..1 {
        if x == 5 {
            count = i;
            break;
        }
    }
    assert(count == 0);
}
